--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
@@ -1,8 +1,8 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionDrawCosmCircle3Points/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionDrawCosmCircle3Points&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Erg&auml;nzungHilfskreisDurch3PunkteZeichnen (44% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHilfskreisDurch3PunkteZeichnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionDrawCosmCircle3Points (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
-<li><a href="../pl/TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Rozszerzenie Dodaj okr&#261;g kosmetyczny oparty na trzech punktach (78% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj okr&#261;g kosmetyczny oparty na trzech punktach (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a></div>
@@ -121,34 +121,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111134619
+Cached time: 20260117144730
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.107 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.224 seconds
 Preprocessor visited node count: 351/1000000
 Post&#8208;expand include size: 25578/2097152 bytes
 Template argument size: 10047/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1204/5000000 bytes
+Unstrip post&#8208;expand size: 1215/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.026      1 -total
- 40.62%   10.979      1 Template:TechDraw_Tools_navi/fr
- 18.36%    4.963      2 Template:Navigation_menu_2
- 14.03%    3.791      1 Template:GuiCommand/fr
- 13.23%    3.575      1 Template:Userdocnavi/fr
- 10.98%    2.968      2 Template:Docnav/fr
-  8.75%    2.366      1 Template:Caption
-  5.04%    1.363      1 Template:Button
-  4.66%    1.260      1 Template:MenuCommand
+100.00%   36.450      1 -total
+ 34.78%   12.678      1 Template:TechDraw_Tools_navi/fr
+ 20.75%    7.565      2 Template:Navigation_menu_2
+ 15.52%    5.656      2 Template:Docnav/fr
+ 14.49%    5.282      1 Template:Userdocnavi/fr
+ 11.70%    4.264      1 Template:GuiCommand/fr
+  9.91%    3.613      1 Template:Caption
+  5.33%    1.944      1 Template:Button
+  5.28%    1.925      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260111134619 and revision id 1733978. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117144730 and revision id 1733978. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
