--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
@@ -3,14 +3,12 @@
 <li><a href="../TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionDrawCosmCircle3Points (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionDrawCosmCircle3Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj okr&#261;g kosmetyczny oparty na trzech punktach (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">Ligne parall&egrave;le</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle cosm&eacute;tique par 2 points</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc cosm&eacute;tique</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -121,15 +119,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117144730
+Cached time: 20260117144836
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.224 seconds
-Preprocessor visited node count: 351/1000000
-Post&#8208;expand include size: 25578/2097152 bytes
-Template argument size: 10047/2097152 bytes
+CPU time usage: 0.091 seconds
+Real time usage: 0.141 seconds
+Preprocessor visited node count: 350/1000000
+Post&#8208;expand include size: 25671/2097152 bytes
+Template argument size: 10109/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -137,18 +135,18 @@ Unstrip post&#8208;expand size: 1215/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.450      1 -total
- 34.78%   12.678      1 Template:TechDraw_Tools_navi/fr
- 20.75%    7.565      2 Template:Navigation_menu_2
- 15.52%    5.656      2 Template:Docnav/fr
- 14.49%    5.282      1 Template:Userdocnavi/fr
- 11.70%    4.264      1 Template:GuiCommand/fr
-  9.91%    3.613      1 Template:Caption
-  5.33%    1.944      1 Template:Button
-  5.28%    1.925      1 Template:MenuCommand
+100.00%   31.322      1 -total
+ 26.58%    8.325      2 Template:Navigation_menu_2
+ 25.98%    8.138      1 Template:TechDraw_Tools_navi/fr
+ 25.98%    8.136      1 Template:Userdocnavi/fr
+ 11.82%    3.703      1 Template:GuiCommand/fr
+ 11.82%    3.703      2 Template:Docnav/fr
+ 11.54%    3.613      1 Template:Caption
+  5.66%    1.772      1 Template:MenuCommand
+  4.63%    1.451      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117144730 and revision id 1733978. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117144836 and revision id 1739577. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
