--- a/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
+++ b/wiki/fr/TechDraw_ExtensionDrawCosmCircle3Points.html
@@ -50,11 +50,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
-<p>L'outil <b>TechDraw Cercle par 3 points</b> ajoute un cercle cosm&eacute;tique bas&eacute; sur trois sommets.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3PointsExample.png&amp;filetimestamp=20220130075515&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3PointsExample.png" decoding="async" width="250" height="119" class="mw-file-element" data-file-width="367" data-file-height="174"></a></span>
+<p>L'outil <b>TechDraw Cercle cosm&eacute;tique par 3 points</b> ajoute un cercle cosm&eacute;tique bas&eacute; sur trois sommets.
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3PointsExample.png&amp;filetimestamp=20220130075515&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3PointsExample.png" decoding="async" width="250" height="119" class="mw-file-element" data-file-width="367" data-file-height="174"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, un cercle cosm&eacute;tique ajout&eacute;</p>
 <p><span id="Usage"></span>
@@ -115,13 +112,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117144922
+Cached time: 20260117144930
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.155 seconds
-Preprocessor visited node count: 348/1000000
+CPU time usage: 0.073 seconds
+Real time usage: 0.159 seconds
+Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 25798/2097152 bytes
 Template argument size: 10205/2097152 bytes
 Highest expansion depth: 6/100
@@ -131,18 +128,18 @@ Unstrip post&#8208;expand size: 1216/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.324      1 -total
- 36.12%   11.313      1 Template:TechDraw_Tools_navi/fr
- 28.88%    9.046      2 Template:Navigation_menu_2
- 18.65%    5.843      1 Template:Userdocnavi/fr
- 10.71%    3.354      1 Template:Caption
- 10.32%    3.234      2 Template:Docnav/fr
-  8.71%    2.729      1 Template:GuiCommand/fr
-  7.52%    2.355      1 Template:Button
-  4.97%    1.557      1 Template:MenuCommand
+100.00%   30.187      1 -total
+ 27.36%    8.260      1 Template:TechDraw_Tools_navi/fr
+ 22.24%    6.715      2 Template:Navigation_menu_2
+ 21.54%    6.501      1 Template:GuiCommand/fr
+ 18.18%    5.488      1 Template:Userdocnavi/fr
+ 14.53%    4.387      2 Template:Docnav/fr
+  7.59%    2.290      1 Template:Caption
+  4.78%    1.442      1 Template:Button
+  4.04%    1.221      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117144922 and revision id 1739581. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278399-0!canonical and timestamp 20260117144930 and revision id 1739583. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
